# hessian2o3

./: .gitignore  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-06-18-examples.md  2026-06-18-hessian-object-derive.md
docs/superpowers/specs/: 2026-06-18-examples-design.md  2026-06-18-hessian-object-derive-design.md
examples/: hessian_macro.rs  hessian_object.rs
hessian2o3-derive/: Cargo.toml
hessian2o3-derive/src/: lib.rs
src/: de.rs  encode.rs  encoder.rs  error.rs  hessian.rs  lib.rs  misc.rs  ser.rs  serde.rs  value.rs
src/codec/: decode.rs  encode.rs  misc.rs  mod.rs  tags.rs
src/encode/: list.rs  map.rs  mod.rs  primitive.rs
src/value/: de.rs  index.rs  list.rs  macros.rs  map.rs  mod.rs  object.rs  ser.rs  value.rs
tests/: derive_integration.rs
