[workspace]
members = [".", "hessian2o3-derive"]

[package]
name = "hessian2o3"
version = "0.1.0"
edition = "2024"

[build-dependencies]
string_cache_codegen = "0.6"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.15"
string_cache = "0.9"
thiserror = "2"
hessian2o3-derive = { path = "hessian2o3-derive" }

[dev-dependencies]
pretty_env_logger = "0.5"
chrono = "0.4.45"
hex = "0.4.3"
assert_matches = "1.5"
